# telescope-control-rust-pico2w

./: Cargo.toml  Cargo_minimal.toml  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  minimal.rs
src/astronomy/: coordinates.rs  mod.rs
src/motor/: mod.rs  stepper.rs
tests/: astronomy_tests.rs
