[package]
name = "telescope-control"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"

# Use the published rp235x-hal crate
rp235x-hal = { version = "0.2.0", features = ["rt", "critical-section-impl"] }

# For the boot block
rp2040-boot2 = "0.3.0"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
overflow-checks = false

[[bin]]
name = "telescope-control"
test = false
bench = false