[package]
name = "telescope-controller"
version = "0.1.0"
edition = "2021"

# Binary for hardware
[[bin]]
name = "telescope-controller"
path = "src/main.rs"

# Library for testing
[lib]
name = "telescope_controller"
path = "src/lib.rs"

[dependencies]
# Embedded dependencies (only for binary)
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
rp235x-hal = { version = "0.3.0", features = ["rt", "critical-section-impl"], optional = true }
#rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"], optional = true }
rp2040-boot2 = { version = "0.3", optional = true }
panic-halt = { version = "0.2.0", optional = true }
embedded-hal = "1.0.0"

# Common dependencies (work on both host and target)
micromath = "2.0"
heapless = "0.8"
libm = "0.2"

[dev-dependencies]
# Testing dependencies (only available during cargo test)
approx = "0.5"
proptest = "1.0"

[features]
default = ["embedded"]
embedded = ["cortex-m", "cortex-m-rt", "rp235x-hal", "rp2040-boot2", "panic-halt"]

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1